Separated Objective and Grid Tracker Color Picker windows

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -361,6 +361,18 @@
             <setting name="ObjectiveCustom" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ObjUnmarkedColorButton" serializeAs="String">
+                <value>#FF696969</value>
+            </setting>
+            <setting name="ObjCollectedColorButton" serializeAs="String">
+                <value>#FF006400</value>
+            </setting>
+            <setting name="ObjAnnotatedColorButton" serializeAs="String">
+                <value>#FFFFA500</value>
+            </setting>
+            <setting name="ObjCompletedColorButton" serializeAs="String">
+                <value>#FFFFC0CB</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
 </configuration>
