--- a/KhTracker/KhTracker.csproj
+++ b/KhTracker/KhTracker.csproj
@@ -172,8 +172,12 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Windows\ColorPicker.xaml">
-      <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="OneHourDictionary.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Windows\ObjectivesWindow.xaml">
       <SubType>Designer</SubType>
