small fixes to autotracking - fixed summons highlighting valor's stat icon - support for puzzle objective autotracking - changed how CheckPCLoaded works

--- a/KhTracker/KhTracker.csproj
+++ b/KhTracker/KhTracker.csproj
@@ -534,6 +534,26 @@
     <Content Include="CustomImages\Grid\Checks\Extra_MunnyPouch2.png" />
     <Content Include="CustomImages\Grid\Checks\Extra_OlympusStone.png" />
     <Content Include="CustomImages\Grid\Checks\Extra_UnknownDisk.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_AerialDodge1.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_AerialDodge2.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_AerialDodge3.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_AerialDodge4.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_DodgeRoll1.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_DodgeRoll2.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_DodgeRoll3.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_DodgeRoll4.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_Glide1.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_Glide2.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_Glide3.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_Glide4.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_HighJump1.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_HighJump2.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_HighJump3.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_HighJump4.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_QuickRun1.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_QuickRun2.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_QuickRun3.png" />
+    <Content Include="CustomImages\Grid\Checks\Growth_QuickRun4.png" />
     <Content Include="CustomImages\Grid\Checks\Magic_Blizzard1.png" />
     <Content Include="CustomImages\Grid\Checks\Magic_Blizzard2.png" />
     <Content Include="CustomImages\Grid\Checks\Magic_Blizzard3.png" />
