support loading grid tracker state whoan loading TSV

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -373,6 +373,9 @@
             <setting name="ObjCompletedColorButton" serializeAs="String">
                 <value>#FFFFC0CB</value>
             </setting>
+            <setting name="WorldVisitLock2" serializeAs="String">
+                <value>False</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
 </configuration>
