--- a/KhTracker/Properties/Settings.settings
+++ b/KhTracker/Properties/Settings.settings
@@ -368,5 +368,8 @@
     <Setting Name="ObjCompletedColorButton" Type="System.Windows.Media.Color" Scope="User">
       <Value Profile="(Default)">#FFFFC0CB</Value>
     </Setting>
+    <Setting Name="WorldVisitLock2" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
