Added support for emblem counter/tracking

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -379,6 +379,9 @@
             <setting name="GridBunterLogic" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="EmblemCount" serializeAs="String">
+                <value>True</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
 </configuration>
