one hour mode fixes - change 1hour mode to toggle - fix 1hour mode nor resetting points from 1hr objectives - remove use of one hour mode json - fix TSV to support new tracker additions and one hour mode

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -382,6 +382,15 @@
             <setting name="EmblemCount" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="GridTrackerStartup" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ObjTrackerStartup" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="OneHourModeToggle" serializeAs="String">
+                <value>False</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
 </configuration>
