Add toggle for classic row size

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -391,6 +391,9 @@
             <setting name="OneHourModeToggle" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ClassicRowSize" serializeAs="String">
+                <value>False</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
 </configuration>
