--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -394,6 +394,18 @@
             <setting name="ClassicRowSize" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="GOAWorldLayout" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="GridColoredHints" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="GridColoredHintsDistance" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="AutoSaveProgress3" serializeAs="String">
+                <value>False</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
 </configuration>
