--- a/KhTracker/KhTracker.csproj
+++ b/KhTracker/KhTracker.csproj
@@ -694,6 +694,7 @@
     <Content Include="CustomImages\Progression\agrabah\elemental_lords.png" />
     <Content Include="CustomImages\Progression\agrabah\jafar.png" />
     <Content Include="CustomImages\Progression\agrabah\lexaeus.png" />
+    <Resource Include="Images\Progression\Min\twilight_town\dusks.png" />
     <Resource Include="Images\System\over_connection.png" />
     <Resource Include="Images\System\over_nonexistence.png" />
     <Resource Include="Images\System\over_peace.png" />
@@ -713,7 +714,6 @@
     <Resource Include="Images\Grid\Objectives\Min\TitanCup.png" />
     <Resource Include="Images\Grid\Objectives\Min\EndOfCoR.png" />
     <Resource Include="Images\Grid\Overlays\Numbers\QuestionMark.png" />
-    <Resource Include="Images\Progression\Min\twilight_town\Creepers.png" />
     <Resource Include="Images\Progression\Min\the_world_that_never_was\FinalXemnas.png" />
     <Resource Include="Images\Grid\Progression\Min\twilight_town\Creepers.png" />
     <Resource Include="Images\Grid\Progression\Old\twilight_town\Creepers.png" />
