initial mining permit work

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -406,6 +406,9 @@
             <setting name="AutoSaveProgress3" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="MiningPermit" serializeAs="String">
+                <value>False</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
 </configuration>
