--- a/KhTracker/KhTracker.csproj
+++ b/KhTracker/KhTracker.csproj
@@ -129,6 +129,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs" />
     <Compile Include="Windows\GridWindow.xaml.cs" />
     <Compile Include="Windows\GridOptionsWindow.xaml.cs">
       <DependentUpon>GridOptionsWindow.xaml</DependentUpon>
@@ -694,6 +695,8 @@
     <Content Include="CustomImages\Progression\agrabah\elemental_lords.png" />
     <Content Include="CustomImages\Progression\agrabah\jafar.png" />
     <Content Include="CustomImages\Progression\agrabah\lexaeus.png" />
+    <Resource Include="Images\Checks\Old\lock_miningpermit.png" />
+    <Resource Include="Images\Checks\Min\lock_miningpermit.png" />
     <Resource Include="Images\Progression\Min\twilight_town\dusks.png" />
     <Resource Include="Images\System\over_connection.png" />
     <Resource Include="Images\System\over_nonexistence.png" />
