--- a/KhTracker/Properties/Settings.settings
+++ b/KhTracker/Properties/Settings.settings
@@ -5,6 +5,9 @@
     <Setting Name="PromiseCharm" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+	  <Setting Name="MiningPermit" Type="System.Boolean" Scope="User">
+		  <Value Profile="(Default)">False</Value>
+	  </Setting>
     <Setting Name="AnsemReports" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
@@ -212,6 +215,9 @@
     <Setting Name="AutoSaveProgress2" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+	<Setting Name="AutoSaveProgress3" Type="System.Boolean" Scope="User">
+		<Value Profile="(Default)">False</Value>
+	</Setting>
     <Setting Name="AutoLoadHints" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
@@ -397,9 +403,6 @@
     </Setting>
     <Setting Name="GridColoredHintsDistance" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">5</Value>
-    </Setting>
-    <Setting Name="AutoSaveProgress3" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
