--- a/KhTracker/Properties/Settings.settings
+++ b/KhTracker/Properties/Settings.settings
@@ -386,6 +386,9 @@
     <Setting Name="OneHourModeToggle" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="DartsModeToggle" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
     <Setting Name="ClassicRowSize" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
