darts and 1 hour share custom objective window

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -391,6 +391,9 @@
             <setting name="OneHourModeToggle" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="DartsModeToggle" serializeAs="String">
+                <value>False</value>
+            </setting>
             <setting name="ClassicRowSize" serializeAs="String">
                 <value>False</value>
             </setting>
@@ -404,6 +407,18 @@
                 <value>5</value>
             </setting>
             <setting name="AutoSaveProgress3" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="OneHourModeAssetsFilepath" serializeAs="String">
+                <value>KhTrackerSettings/GameModes/OneHourModeAssets.json</value>
+            </setting>
+            <setting name="DartsModeAssetsFilepath" serializeAs="String">
+                <value>KhTrackerSettings/GameModes/DartsModeAssets.json</value>
+            </setting>
+            <setting name="Custom1HRAssets" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CustomDartsAssets" serializeAs="String">
                 <value>False</value>
             </setting>
         </KhTracker.Properties.Settings>
