darts support cleanup

--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -421,6 +421,9 @@
             <setting name="CustomDartsAssets" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ObjectivePointsOrder" serializeAs="String">
+                <value>False</value>
+            </setting>
         </KhTracker.Properties.Settings>
     </userSettings>
 </configuration>
