--- a/KhTracker/KhTracker.csproj
+++ b/KhTracker/KhTracker.csproj
@@ -705,6 +705,7 @@
     <Content Include="CustomImages\Progression\agrabah\elemental_lords.png" />
     <Content Include="CustomImages\Progression\agrabah\jafar.png" />
     <Content Include="CustomImages\Progression\agrabah\lexaeus.png" />
+    <Resource Include="Images\System\darts.png" />
     <Resource Include="Images\Progression\Min\twilight_town\dusks.png" />
     <Resource Include="Images\System\over_connection.png" />
     <Resource Include="Images\System\over_nonexistence.png" />
