--- a/KhTracker/App.config
+++ b/KhTracker/App.config
@@ -206,7 +206,7 @@
                 <value>False</value>
             </setting>
             <setting name="WorldHintHighlight" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="Disconnect" serializeAs="String">
                 <value>True</value>
