--- a/KhTracker/Properties/Settings.settings
+++ b/KhTracker/Properties/Settings.settings
@@ -201,7 +201,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="WorldHintHighlight" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="Disconnect" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
